[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    ipyeos = ipyeos:run_ipyeos
    eos-node = ipyeos:run_eosnode
    eosnode = ipyeos:run_eosnode
    eos-debugger = ipyeos:start_debug_server
    eosdebugger = ipyeos:start_debug_server

