[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    ipyeos = ipyeos:run_ipyeos
    eosnode = ipyeos:run_eosnode
    pyeosnode = ipyeos:run_pyeosnode
    nodeos = ipyeos:run_nodeos
    keosd = ipyeos:run_keosd
    cleos = ipyeos:run_cleos
    eosdebugger = ipyeos:start_debug_server
    eostest = ipyeos:run_test
    ipyeos-get-dir = ipyeos:ipyeos_get_dir
    ipyeos-get-lib-dir = ipyeos:ipyeos_get_lib_dir
